[package]
name = "image_registration"
version = "0.1.0"
authors = ["YavorGIvanov <yivanov@viewray.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
imgui = "0.2.1"
glium = "0.25.1"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.1"